--- a/org.eclipse.xtext.xdoc.releng/pom.xml
+++ b/org.eclipse.xtext.xdoc.releng/pom.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.eclipse.xtext.xdoc</groupId>
-    <artifactId>org.eclipse.xtext.xdoc.parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>org.eclipse.xtext.xdoc</groupId>
-  <artifactId>org.eclipse.xtext.xdoc.releng</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <packaging>eclipse-update-site</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.eclipse.xtext.xdoc</groupId>
+		<artifactId>org.eclipse.xtext.xdoc.parent</artifactId>
+		<version>0.1.0-SNAPSHOT</version>
+	</parent>
+	<groupId>org.eclipse.xtext.xdoc</groupId>
+	<artifactId>org.eclipse.xtext.xdoc.releng</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<packaging>eclipse-update-site</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<id>copy-to-central-site</id>
+						<phase>install</phase>
+						<goals>
+							<goal>mirror</goal>
+						</goals>
+						<configuration>
+							<source>
+								<repository>
+									<url>file:${project.build.directory}/repository</url>
+								</repository>
+							</source>
+							<append>false</append>
+							<destination>/v/taskdev/sw/share/apache/htdocs/updates/xDoc</destination>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
