--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
       <layout>p2</layout>
       <url>http://download.eclipse.org/modeling/emf/updates/releases/</url>
     </repository>
-    <repository>
+    <!--<repository>
       <id>xpand</id>
       <layout>p2</layout>
       <url>https://hudson.eclipse.org/hudson/job/Xpand-nightly-HEAD/lastSuccessfulBuild/artifact/xpand.p2.repository/</url>
@@ -43,7 +43,7 @@
       <id>mwe2</id>
       <layout>p2</layout>
       <url>https://hudson.eclipse.org/hudson/job/MWE-nightly-HEAD/lastSuccessfulBuild/artifact/mwe.p2.repository/</url>
-    </repository>
+    </repository> -->
     <!--<repository>
       <id>antlrruntime</id>
       <layout>p2</layout>
@@ -60,9 +60,9 @@
       <url>http://download.eclipse.org/modeling/tmf/xtext/updates/orbit</url>
     </repository>-->
     <repository>
-      <id>eclipse-galileo</id>
+      <id>eclipse-kepler</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/releases/juno</url>
+      <url>http://download.eclipse.org/releases/kepler</url>
     </repository>
   </repositories>
   <profiles>
