fixed source mirror path (repository->site)
Change-Id: Ic9fdf3427dc96d42d630197ed42243c3c0c3f916

--- a/org.eclipse.xtext.xdoc.releng/pom.xml
+++ b/org.eclipse.xtext.xdoc.releng/pom.xml
@@ -29,7 +29,7 @@
 						<configuration>
 							<source>
 								<repository>
-									<url>file:${project.build.directory}/repository</url>
+									<url>file:${project.build.directory}/site</url>
 								</repository>
 							</source>
 							<append>false</append>
