--- a/org.eclipse.xtext.xdoc.releng/pom.xml
+++ b/org.eclipse.xtext.xdoc.releng/pom.xml
@@ -13,31 +13,42 @@
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-p2-extras-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<executions>
-					<execution>
-						<id>copy-to-central-site</id>
-						<phase>install</phase>
-						<goals>
-							<goal>mirror</goal>
-						</goals>
-						<configuration>
-							<source>
-								<repository>
-									<url>file:${project.build.directory}/site</url>
-								</repository>
-							</source>
-							<append>false</append>
-							<destination>/v/taskdev/sw/share/apache/htdocs/updates/xDoc</destination>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	<profiles>
+		<profile>
+			<id>publish</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-p2-extras-plugin</artifactId>
+						<version>${tycho.version}</version>
+						<executions>
+							<execution>
+								<id>copy-to-central-site</id>
+								<phase>install</phase>
+								<goals>
+									<goal>mirror</goal>
+								</goals>
+								<configuration>
+									<source>
+										<repository>
+											<url>file:${project.build.directory}/site</url>
+										</repository>
+									</source>
+									<append>true</append>
+									<destination>${publish-dest}</destination>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>xt</id>
+			<properties>
+				<publish-dest>/v/taskdev/sw/share/apache/htdocs/updates/latest</publish-dest>
+			</properties>
+		</profile>
+	</profiles>
 </project>
