--- a/org.eclipse.xtext.xdoc.releng/pom.xml
+++ b/org.eclipse.xtext.xdoc.releng/pom.xml
@@ -67,5 +67,12 @@
 				<tdsl-site>/v/taskdev/sw/share/apache/htdocs/updates/latest</tdsl-site>
 			</properties>
 		</profile>
+		<profile>
+			<id>testosterone4j</id>
+			<properties>
+				<publish-dest>/var/www/vhosts/lvps91-250-115-227.dedicated.hosteurope.de/testosterone4j/updates/xDoc/latest</publish-dest>
+				<tdsl-site>/var/www/vhosts/lvps91-250-115-227.dedicated.hosteurope.de/testosterone4j/updates/latest</tdsl-site>
+			</properties>
+		</profile>
 	</profiles>
 </project>
