--- a/org.eclipse.xtext.xdoc.releng/pom.xml
+++ b/org.eclipse.xtext.xdoc.releng/pom.xml
@@ -70,8 +70,8 @@
 		<profile>
 			<id>testosterone4j</id>
 			<properties>
-				<publish-dest>/var/www/vhosts/lvps91-250-115-227.dedicated.hosteurope.de/testosterone4j/updates/xDoc/latest</publish-dest>
-				<tdsl-site>/var/www/vhosts/lvps91-250-115-227.dedicated.hosteurope.de/testosterone4j/updates/latest</tdsl-site>
+				<publish-dest>/var/www/testosterone4j.org/updates/xDoc/latest</publish-dest>
+				<tdsl-site>/var/www/testosterone4j.org/updates/latest</tdsl-site>
 			</properties>
 		</profile>
 	</profiles>
